# ChristosEngine2

./: CMakeLists.txt  Doxyfile  README.md
doc/: My Engine.dia
shaders/: ModelShader.txt  Source.txt
src/game/: main.cpp  src - Shortcut.lnk
src/game_engine/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Keyboard.cpp  Keyboard.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Resource.h  Resources.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  TriangleRenderer.h  game_engine.h
src/rend/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Mesh.cpp  Mesh.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAdapter.h  Util.cpp  Util.h  mathutil.h  rend.h
src/sr1/: observer_ptr  shared_ptr
